// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderZodSchema > should render a form aggregate 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-6 items-start"
  >
    <input
      name="type"
      type="hidden"
      value="aggregate"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_26_-form-item"
        >
          Columns
        </label>
        <div
          aria-describedby="_r_26_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_26_-form-item"
        >
          <div
            aria-controls="radix-_r_27_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
          for="_r_28_-form-item"
        >
          Aggregations
        </label>
        <div
          aria-describedby="_r_28_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_28_-form-item"
        >
          <div
            aria-controls="radix-_r_29_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select aggregations
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form column_conversion 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="column_conversion"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_d_-form-item"
        >
          Column
        </label>
        <div
          class="flex items-center gap-1"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_e_"
            aria-expanded="false"
            class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              --
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
          for="_r_f_-form-item"
        >
          Data type (numpy)
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_g_"
          aria-expanded="false"
          class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            --
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_h_-form-item"
        >
          Handle errors
        </label>
        <div
          aria-describedby="_r_h_-form-item-description"
          aria-invalid="false"
          aria-required="false"
          class="flex flex-row gap-2 pt-1 items-center"
          dir="ltr"
          id="_r_h_-form-item"
          role="radiogroup"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="errors-ignore"
              role="radio"
              tabindex="-1"
              type="button"
              value="ignore"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="errors-ignore"
            >
              Ignore
            </label>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="errors-raise"
              role="radio"
              tabindex="-1"
              type="button"
              value="raise"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="errors-raise"
            >
              Raise
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form expand_dict 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="expand_dict"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_2q_-form-item"
        >
          Column
        </label>
        <div
          class="flex items-center gap-1"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_2r_"
            aria-expanded="false"
            class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              --
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form explode_columns 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="explode_columns"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_2o_-form-item"
        >
          Columns
        </label>
        <div
          aria-describedby="_r_2o_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_2o_-form-item"
        >
          <div
            aria-controls="radix-_r_2p_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form filter_rows 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="filter_rows"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          aria-describedby="_r_0_-form-item-description"
          aria-invalid="false"
          aria-required="false"
          class="flex flex-row gap-2 pt-1 items-center"
          dir="ltr"
          id="_r_0_-form-item"
          role="radiogroup"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="operation-keep_rows"
              role="radio"
              tabindex="-1"
              type="button"
              value="keep_rows"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="operation-keep_rows"
            >
              Keep Rows
            </label>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="operation-remove_rows"
              role="radio"
              tabindex="-1"
              type="button"
              value="remove_rows"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="operation-remove_rows"
            >
              Remove Rows
            </label>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        >
          Value
        </label>
        <div
          class="flex flex-col gap-2 min-w-[220px]"
        >
          <div
            class="text-destructive text-xs font-semibold"
          >
            <div>
              At least 1 required.
            </div>
          </div>
          <div>
            <button
              class="disabled:opacity-50 disabled:pointer-events-none inline-flex items-center justify-center font-medium focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 ring-offset-background opacity-80 hover:opacity-100 active:opacity-100 h-7 px-2 rounded-md text-xs hover:text-accent-foreground"
              data-testid="marimo-plugin-data-frames-add-array-item"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-plus w-3.5 h-3.5 mr-1"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5 12h14"
                />
                <path
                  d="M12 5v14"
                />
              </svg>
              Add
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form group_by 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="group_by"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_1o_-form-item"
        >
          Group by columns
        </label>
        <div
          aria-describedby="_r_1o_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_1o_-form-item"
        >
          <div
            aria-controls="radix-_r_1p_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select group by columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_1q_-form-item"
        >
          Aggregate on columns
        </label>
        <div
          aria-describedby="_r_1q_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_1q_-form-item"
        >
          <div
            aria-controls="radix-_r_1r_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select aggregate on columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
          for="_r_1s_-form-item"
        >
          Aggregation
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_1t_"
          aria-expanded="false"
          class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            --
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="flex flex-row items-start space-x-2"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
            for="_r_1u_-form-item"
          >
            Drop N/A
          </label>
          <button
            aria-checked="false"
            aria-describedby="_r_1u_-form-item-description"
            aria-invalid="false"
            class="flex items-center justify-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
            data-state="unchecked"
            data-testid="marimo-plugin-data-frames-boolean-checkbox"
            id="_r_1u_-form-item"
            role="checkbox"
            type="button"
            value="on"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form pivot 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="pivot"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_3a_-form-item"
        >
          Columns
        </label>
        <div
          aria-describedby="_r_3a_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_3a_-form-item"
        >
          <div
            aria-controls="radix-_r_3b_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_3c_-form-item"
        >
          Rows
        </label>
        <div
          aria-describedby="_r_3c_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_3c_-form-item"
        >
          <div
            aria-controls="radix-_r_3d_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select rows
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_3e_-form-item"
        >
          Values
        </label>
        <div
          aria-describedby="_r_3e_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_3e_-form-item"
        >
          <div
            aria-controls="radix-_r_3f_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select values
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
          for="_r_3g_-form-item"
        >
          Aggregation
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_3h_"
          aria-expanded="false"
          class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            --
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form rename_column 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="rename_column"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_5_-form-item"
        >
          Column
        </label>
        <div
          class="flex items-center gap-1"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_6_"
            aria-expanded="false"
            class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              --
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="relative"
        >
          <input
            aria-describedby="_r_7_-form-item-description"
            aria-invalid="false"
            class="shadow-xs-solid hover:shadow-sm-solid disabled:shadow-xs-solid focus-visible:shadow-md-solid flex h-6 w-full rounded-sm border border-input bg-background px-1.5 py-1 text-sm font-code ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:border-primary disabled:cursor-not-allowed disabled:opacity-50 my-0"
            id="_r_7_-form-item"
            name="new_column_id"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form sample_rows 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="sample_rows"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_2a_-form-item"
        >
          Number of rows
        </label>
        <div
          class="my-0"
          data-rac=""
        >
          <div
            class="shadow-xs-solid hover:shadow-sm-solid hover:focus-within:shadow-md-solid flex overflow-hidden rounded-sm border border-input bg-background text-sm font-code ring-offset-background disabled:cursor-not-allowed disabled:opacity-50 disabled:shadow-xs-solid focus-within:shadow-md-solid focus-within:outline-hidden focus-within:ring-1 focus-within:ring-ring focus-within:border-primary h-6 w-full my-0"
          >
            <input
              aria-describedby="_r_2a_-form-item-description"
              aria-roledescription="Number field"
              autocomplete="off"
              autocorrect="off"
              class="flex-1 w-full placeholder:text-muted-foreground outline-hidden disabled:cursor-not-allowed disabled:opacity-50 px-1.5"
              data-rac=""
              id="_r_2a_-form-item"
              inputmode="numeric"
              spellcheck="false"
              tabindex="0"
              title=""
              type="text"
              value=""
            />
            <div
              class="flex flex-col border-s-2"
            >
              <button
                aria-controls="_r_2a_-form-item"
                aria-label="Increase"
                class="cursor-default text-muted-foreground pressed:bg-muted-foreground group-disabled:text-disabled-foreground outline-hidden focus-visible:text-primary disabled:cursor-not-allowed disabled:opacity-50 hover:text-primary hover:bg-muted px-0.5"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-_r_2h_"
                slot="increment"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-up w-3 h-3 -mb-px"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m18 15-6-6-6 6"
                  />
                </svg>
              </button>
              <div
                class="h-px shrink-0 divider bg-border z-10"
              />
              <button
                aria-controls="_r_2a_-form-item"
                aria-label="Decrease"
                class="cursor-default text-muted-foreground pressed:bg-muted-foreground group-disabled:text-disabled-foreground outline-hidden focus-visible:text-primary disabled:cursor-not-allowed disabled:opacity-50 hover:text-primary hover:bg-muted px-0.5"
                data-rac=""
                data-react-aria-pressable="true"
                id="react-aria-_r_2i_"
                slot="decrement"
                tabindex="-1"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="lucide lucide-chevron-down w-3 h-3 -mt-px"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="m6 9 6 6 6-6"
                  />
                </svg>
              </button>
            </div>
          </div>
        </div>
        <input
          name="n"
          type="hidden"
          value=""
        />
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <button
        class="disabled:opacity-50 disabled:pointer-events-none inline-flex items-center justify-center font-medium focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 ring-offset-background bg-secondary text-secondary-foreground hover:bg-secondary/80 border border-input shadow-xs active:shadow-none h-7 px-2 rounded-md text-xs"
        data-testid="marimo-plugin-data-frames-random-number-button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-refresh-ccw w-3.5 h-3.5 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"
          />
          <path
            d="M16 16h5v5"
          />
        </svg>
        Re-sample
      </button>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="flex flex-row items-start space-x-2"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
            for="_r_2n_-form-item"
          >
            Sample with replacement
          </label>
          <button
            aria-checked="false"
            aria-describedby="_r_2n_-form-item-description"
            aria-invalid="false"
            class="flex items-center justify-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
            data-state="unchecked"
            data-testid="marimo-plugin-data-frames-boolean-checkbox"
            id="_r_2n_-form-item"
            role="checkbox"
            type="button"
            value="on"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form select_columns 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="select_columns"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_3_-form-item"
        >
          Columns
        </label>
        <div
          aria-describedby="_r_3_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_3_-form-item"
        >
          <div
            aria-controls="radix-_r_4_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form shuffle_rows 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="shuffle_rows"
    />
    <div
      class="flex flex-row align-start"
    >
      <button
        class="disabled:opacity-50 disabled:pointer-events-none inline-flex items-center justify-center font-medium focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 ring-offset-background bg-secondary text-secondary-foreground hover:bg-secondary/80 border border-input shadow-xs active:shadow-none h-7 px-2 rounded-md text-xs"
        data-testid="marimo-plugin-data-frames-random-number-button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-refresh-ccw w-3.5 h-3.5 mr-1"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 0 0-9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"
          />
          <path
            d="M3 3v5h5"
          />
          <path
            d="M3 12a9 9 0 0 0 9 9 9.75 9.75 0 0 0 6.74-2.74L21 16"
          />
          <path
            d="M16 16h5v5"
          />
        </svg>
        Re-shuffle
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form sort_column 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-6"
  >
    <input
      name="type"
      type="hidden"
      value="sort_column"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_1d_-form-item"
        >
          Column
        </label>
        <div
          class="flex items-center gap-1"
        >
          <button
            aria-autocomplete="none"
            aria-controls="radix-_r_1e_"
            aria-expanded="false"
            class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
            data-placeholder=""
            data-state="closed"
            dir="ltr"
            role="combobox"
            type="button"
          >
            <span
              style="pointer-events: none;"
            >
              --
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down h-4 w-4 opacity-50"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <div
          class="flex flex-row items-start space-x-2"
        >
          <label
            class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
            for="_r_1f_-form-item"
          >
            Ascending
          </label>
          <button
            aria-checked="false"
            aria-describedby="_r_1f_-form-item-description"
            aria-invalid="false"
            class="flex items-center justify-center peer h-4 w-4 shrink-0 rounded-sm border border-primary ring-offset-background focus-visible:outline-hidden focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:bg-primary data-[state=checked]:text-primary-foreground"
            data-state="unchecked"
            data-testid="marimo-plugin-data-frames-boolean-checkbox"
            id="_r_1f_-form-item"
            role="checkbox"
            type="button"
            value="on"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_1g_-form-item"
        >
          N/A position
        </label>
        <div
          aria-describedby="_r_1g_-form-item-description"
          aria-invalid="false"
          aria-required="false"
          class="flex flex-row gap-2 pt-1 items-center"
          dir="ltr"
          id="_r_1g_-form-item"
          role="radiogroup"
          style="outline: none;"
          tabindex="0"
        >
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="na_position-first"
              role="radio"
              tabindex="-1"
              type="button"
              value="first"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="na_position-first"
            >
              First
            </label>
          </div>
          <div
            class="flex items-center gap-1"
          >
            <button
              aria-checked="false"
              class="h-[16px] w-[16px] transition-shadow data-[state=unchecked]:shadow-xs-solid rounded-full border border-input text-primary ring-offset-background focus:outline-hidden focus:shadow-none focus-visible:ring-1 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50 data-[state=checked]:border-primary data-[state=checked]:shadow-none"
              data-radix-collection-item=""
              data-state="unchecked"
              id="na_position-last"
              role="radio"
              tabindex="-1"
              type="button"
              value="last"
            />
            <label
              class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
              for="na_position-last"
            >
              Last
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renderZodSchema > should render a form unique 1`] = `
<DocumentFragment>
  <div
    class="flex flex-row gap-6 items-start"
  >
    <input
      name="type"
      type="hidden"
      value="unique"
    />
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
          for="_r_31_-form-item"
        >
          Columns
        </label>
        <div
          aria-describedby="_r_31_-form-item-description"
          aria-invalid="false"
          class="relative"
          id="_r_31_-form-item"
        >
          <div
            aria-controls="radix-_r_32_"
            aria-expanded="false"
            aria-haspopup="dialog"
            class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
            data-state="closed"
            type="button"
          >
            <span
              class="truncate flex-1 min-w-0"
            >
              Select columns
            </span>
            <svg
              aria-hidden="true"
              class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="m6 9 6 6 6-6"
              />
            </svg>
          </div>
          <div
            class="flex flex-col gap-1 items-start"
          />
        </div>
      </div>
    </div>
    <div
      class="flex flex-row align-start"
    >
      <div
        class="flex flex-col gap-1"
      >
        <label
          class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70 whitespace-pre"
          for="_r_33_-form-item"
        >
          Keep
        </label>
        <button
          aria-autocomplete="none"
          aria-controls="radix-_r_34_"
          aria-expanded="false"
          class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
          data-placeholder=""
          data-state="closed"
          dir="ltr"
          role="combobox"
          type="button"
        >
          <span
            style="pointer-events: none;"
          >
            --
          </span>
          <svg
            aria-hidden="true"
            class="lucide lucide-chevron-down h-4 w-4 opacity-50"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="m6 9 6 6 6-6"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders custom forms column_id 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_3p_-form-item"
    >
      Column
    </label>
    <div
      class="flex items-center gap-1"
    >
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_3q_"
        aria-expanded="false"
        class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
        data-placeholder=""
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          --
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders custom forms column_id_array 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_40_-form-item"
    >
      Columns
    </label>
    <div
      aria-describedby="_r_40_-form-item-description"
      aria-invalid="false"
      class="relative"
      id="_r_40_-form-item"
    >
      <div
        aria-controls="radix-_r_41_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
        data-state="closed"
        type="button"
      >
        <span
          class="truncate flex-1 min-w-0"
        >
          Select columns
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </div>
      <div
        class="flex flex-col gap-1 items-start"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders custom forms column_id_dot_array 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <div
      aria-describedby="_r_42_-form-item-description"
      aria-invalid="false"
      class="relative"
      id="_r_42_-form-item"
    >
      <div
        aria-controls="radix-_r_43_"
        aria-expanded="false"
        aria-haspopup="dialog"
        class="flex h-6 w-fit mb-1 shadow-xs-solid items-center justify-between rounded-sm border border-input bg-transparent px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground hover:shadow-sm-solid focus:outline-hidden focus:ring-1 focus:ring-ring focus:border-primary focus:shadow-md-solid disabled:cursor-not-allowed disabled:opacity-50 min-w-[180px]"
        data-state="closed"
        type="button"
      >
        <span
          class="truncate flex-1 min-w-0"
        >
          --
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down ml-3 w-4 h-4 opacity-50 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </div>
      <div
        class="flex flex-col gap-1 items-start"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders custom forms column_id_optional 1`] = `
<DocumentFragment>
  <div
    class="flex flex-col gap-1"
  >
    <label
      class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
      for="_r_44_-form-item"
    >
      Column
    </label>
    <div
      class="flex items-center gap-1"
    >
      <button
        aria-autocomplete="none"
        aria-controls="radix-_r_45_"
        aria-expanded="false"
        class="flex h-6 w-fit items-center justify-between rounded-sm bg-background px-2 text-sm font-prose ring-offset-background placeholder:text-muted-foreground focus:outline-hidden focus:ring-1 focus:ring-ring disabled:cursor-not-allowed disabled:opacity-50 cursor-pointer shadow-xs-solid border border-input hover:shadow-sm-solid focus:border-primary focus:shadow-md-solid disabled:hover:shadow-xs-solid mb-0 min-w-[180px]"
        data-placeholder=""
        data-state="closed"
        dir="ltr"
        role="combobox"
        type="button"
      >
        <span
          style="pointer-events: none;"
        >
          --
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down h-4 w-4 opacity-50"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
